src/components/Pages.css
.info {
    margin: 0 auto;
    padding: 15px 0 20px 0;
    max-width: 768px;
    width: 100%;
    height: 92vh;
    text-align: center;
    overflow: auto;
    list-style-position: inside;
}

li {
    font-weight: bold;
}

hr {
    border: 1px solid black;
    width: 98%;
    margin: 0 auto;
}

img {
    width: 98%;
    height: auto;
}

p {
    padding: 2%;
}

span {
    font-weight: normal;
}

